--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -54,6 +54,10 @@ P(w,d) &= \sum_{z\in \mathcal{Z}} P(z)P(d|z)P(w|z) \tag{2}
 
 ![此处输入图片的描述][4]
 
+
+----------
+
+
 ####  Estimate parameters
 模型中的参数包括： $P(z|d)$  和 P(w|z)。我们可以采用极大似然估计，目标函数为：
 
@@ -65,7 +69,7 @@ $$L = \prod_{(d,w)} P(w|d) = \prod_{d\in \mathcal{D}}\prod_{w\in \mathcal{W}} P(
 
 $$\mathcal{L} =\log L = \sum_{d\in \mathcal{D}}\sum_{w\in \mathcal{W}} n(d,w)\log \sum_{z \in \mathcal{Z}} P(w|z)P(z|d)) \tag{4}$$
 
-这是一个非凸优化（non-convex optimization）问题，我们利用EM算法来估计参数。
+这是一个非凸优化（non-convex optimization）问题，我们利用EM算法来估计参数（对于这种包含隐藏变量的参数估计，果断选EM算法呀）。
 
 ----------
 
