--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -69,7 +69,7 @@ $$L = \prod_{(d,w)} P(w|d) = \prod_{d\in \mathcal{D}}\prod_{w\in \mathcal{W}} P(
 
 $$\mathcal{L} =\log L = \sum_{d\in \mathcal{D}}\sum_{w\in \mathcal{W}} n(d,w)\log \sum_{z \in \mathcal{Z}} P(w|z)P(z|d)) \tag{4}$$
 
-这是一个非凸优化（non-convex optimization）问题，我们利用EM算法来估计参数（对于这种包含隐藏变量的参数估计，果断选EM算法呀）。
+这是一个非凸优化（non-convex optimization）问题，我们利用EM算法来估计参数（对于这种包含**隐藏变量**的参数估计，果断选EM算法呀）。
 
 ----------
 
