--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -33,21 +33,17 @@ pLSA假设每篇文档的生成过程是这样的：
 
 同时我们认为在给定 Topic z 的条件下，单词 w 和文档 d 之间是条件独立的，也就说：
 
-$$P(w|d,z) = P(w|z)$$
+$$\begin{align*}
+P(w|d,z) & = P(w|z)\\
+P(w,d|z) & = P(w|z)P(d|z)
+\end{align*}$$
 
 那么，
 
 $$\begin{align*}
-P(w,d) &= P(d)P(w|d) \\
+P(w,d) &= P(d)P(w|d)  \tag{1}\\
 P(w|d) & = \sum_{z\in \mathcal{Z}} P(w,z|d)\\
-&= \sum_{z\in \mathcal{Z}} P(w|d,z)P(z|d)
-\end{align*}$$
-
-即，
-
-$$\begin{align*}
-P(w|d) &= \sum_{z\in \mathcal{Z}} P(w|z)P(z|d) \tag{1}\\
-P(w,d) &= \sum_{z\in \mathcal{Z}} P(z)P(d|z)P(w|z) \tag{2}
+&= \sum_{z\in \mathcal{Z}} P(w|d)P(z|d) \tag{2}
 \end{align*}$$
 
 再来一发神图，
@@ -61,15 +57,19 @@ P(w,d) &= \sum_{z\in \mathcal{Z}} P(z)P(d|z)P(w|z) \tag{2}
 ####  Estimate parameters
 模型中的参数包括： $P(z|d)$  和 P(w|z)。我们可以采用极大似然估计，目标函数为：
 
-$$L = \prod_{(d,w)} P(w|d) = \prod_{d\in \mathcal{D}}\prod_{w\in \mathcal{W}} P(w|d)^{n(d,w)} \tag{3}$$
+$$L = \prod_{(d,w)} P(w|d) = \prod_{d\in \mathcal{D}}\prod_{w\in \mathcal{W}} P(w,d)^{n(d,w)} \tag{3}$$
 
 其中 $n(d,w)$ 表示单词 w 在文档 d 中出现的次数。
 
 取对数，
 
-$$\mathcal{L} =\log L = \sum_{d\in \mathcal{D}}\sum_{w\in \mathcal{W}} n(d,w)\log \sum_{z \in \mathcal{Z}} P(w|z)P(z|d)) \tag{4}$$
+$$\begin{align*}
+\arg\max_\theta L(\theta)
+&= \arg\max_\theta \sum_{d,w} n(d,w)\log P(w|d;\theta) \\
+&= \arg\max_\theta \sum_{d,w} n(d,w)\log \sum_z P(w|z)P(z|d)
+\end{align*}$$
 
-这是一个非凸优化（non-convex optimization）问题，我们利用EM算法来估计参数（对于这种包含**隐藏变量**的参数估计，果断选EM算法呀）。
+这是一个非凸优化（non-convex optimization）问题，我们利用EM算法来估计参数（对于这种包含隐藏变量的参数估计，果断选EM算法呀）。
 
 ----------
 
