--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -67,7 +67,7 @@ $$\begin{align*}
 \arg\max_\theta L(\theta)
 & = \arg\max_\theta \sum_{d,w} n(d,w)\log P(d,w;\theta)\\
 &=  \arg\max_\theta \sum_{d,w} n(d,w)\log P(w|d;\theta)P(d) \\
-&= \arg\max_\theta \left\{ \sum_{d,w} n(d,w)\log P(w|d;\theta) + \underbrace{\sum_{d,w} n(d,w)\log P(d)}_{\text{与} \theta \text{无关项}} \right\}\\
+&= \arg\max_\theta \sum_{d,w} n(d,w)\log P(w|d;\theta) + \underbrace{\sum_{d,w} n(d,w)\log P(d)}_{\text{与} \theta \text{无关项}} \\
 &= \arg\max_\theta \sum_{d,w} n(d,w)\log \sum_z P(w|z)P(z|d)
 \end{align*}$$
 
