--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -57,7 +57,7 @@ P(w|d) & = \sum_{z\in \mathcal{Z}} P(w,z|d)\\
 ####  Estimate parameters
 模型中的参数包括： $P(z|d)$  和 P(w|z)。我们可以采用极大似然估计，目标函数为：
 
-$$L = \prod_{(d,w)} P(w|d) = \prod_{d\in \mathcal{D}}\prod_{w\in \mathcal{W}} P(w,d)^{n(d,w)} \tag{3}$$
+$$L = \prod_{(d,w)} P(w,d) = \prod_{d\in \mathcal{D}}\prod_{w\in \mathcal{W}} P(w,d)^{n(d,w)} \tag{3}$$
 
 其中 $n(d,w)$ 表示单词 w 在文档 d 中出现的次数。
 
