--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -71,7 +71,7 @@ $$\begin{align*}
 &= \arg\max_\theta \sum_{d,w} n(d,w)\log \sum_z P(w|z)P(z|d)
 \end{align*}$$
 
-这是一个非凸优化（non-convex optimization）问题，我们利用EM算法来估计参数（对于这种包含隐藏变量的参数估计，果断选EM算法呀）。
+这是一个非凸优化（non-convex optimization）问题，我们利用EM算法来估计参数（对于这种包含**隐藏变量**的参数估计，果断选EM算法呀）。
 
 ----------
 
