--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -31,6 +31,8 @@ pLSA假设每篇文档的生成过程是这样的：
 
 > 并且每个主题在所有词项上服从 Multinomial 分布，每个文档在所有主题上服从 Multinomial 分布。
 
+![此处输入图片的描述][4]
+
 同时我们认为在给定 Topic z 的条件下，单词 w 和文档 d 之间是条件独立的，也就说：
 
 $$\begin{align*}
@@ -48,7 +50,7 @@ P(w|d) & = \sum_{z\in \mathcal{Z}} P(w,z|d)\\
 
 再来一发神图，
 
-![此处输入图片的描述][4]
+![此处输入图片的描述][5]
 
 
 ----------
@@ -73,10 +75,19 @@ $$\begin{align*}
 
 这是一个非凸优化（non-convex optimization）问题，我们利用EM算法来估计参数（对于这种包含**隐藏变量**的参数估计，果断选EM算法呀）。
 
+E step:
+
+$$\begin{align*}
+E_{z|d,w;\theta_t}[\log P(w, z|d;\theta)]
+&= \sum_z P(z|d,w;\theta_t) \log P(w, z|d;\theta) \\
+&= \sum_z P(z|d,w;\theta_t) [\log P(w|z) + \log P(z|d)] \\
+\end{align*}$$
+
 ----------
 
 
   [1]: http://charlesx.top/2016/03/Latent-Semantic-Analysis/
   [2]: http://7xjbdi.com1.z0.glb.clouddn.com/f1_plsa.jpg
   [3]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-16_152408.png?imageView2/2/w/400
-  [4]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-16_161734.png?imageView2/2/w/400
+  [4]: http://7xjbdi.com1.z0.glb.clouddn.com/f2.jpg
+  [5]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-16_161734.png?imageView2/2/w/400
