--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -75,16 +75,15 @@ $$\begin{align*}
 
 这是一个非凸优化（non-convex optimization）问题，我们利用EM算法来估计参数（对于这种包含**隐藏变量**的参数估计，果断选EM算法呀）。
 
-#### EM通俗版
 ----------
 
+#### EM通俗版
 
-> 简版：猜（E-step）,反思（M-step）,重复；
+> 简版：猜（E-step）, 反思（M-step）, 重复；
 
-啰嗦版：你知道一些东西（观察的到的数据），你不知道一些东西（隐藏变量），你很好奇，想知道点那些不了解的东西。怎么办呢？     
-你根据一些假设（parameter）先猜（E-step），把那些不知道的东西都猜出来，假装你全都知道了;    然后有了这些猜出来的数据，你反思一下，更新一下你的假设（parameter）,   
-让你观察到的数据更加可能(Maximize likelihood; M-step);    
-然后再猜，再反思，最后，你就得到了一个可以解释整个数据的假设了。
+**啰嗦版**：你知道一些东西（观察的到的数据），你不知道一些东西（隐藏变量），你很好奇，想知道点那些不了解的东西。怎么办呢？     
+你根据一些假设（parameter）先猜（E-step），把那些不知道的东西都猜出来，假装你全都知道了; 然后有了这些猜出来的数据，你反思一下，更新一下你的假设（parameter）,   
+让你观察到的数据更加可能(Maximize likelihood; M-step);然后再猜，再反思，最后，你就得到了一个可以解释整个数据的假设了。
 
 
 ----------
