--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -78,6 +78,7 @@ $$\begin{align*}
 ----------
 
 #### EM通俗版
+我们先回味一下EM算法的核心思想。
 
 > 简版：猜（E-step）, 反思（M-step）, 重复；
 
@@ -96,7 +97,6 @@ E_{z|d,w;\theta_t}[\log P(w, z|d;\theta)]
 &= \sum_z P(z|d,w;\theta_t) [\log P(w|z) + \log P(z|d)] \\
 \end{align*}$$
 
-----------
 ----------
 
 
