--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -83,7 +83,7 @@ $$\begin{align*}
 > 简版：猜（E-step）, 反思（M-step）, 重复；
 
 **啰嗦版**：你知道一些东西（观察的到的数据），你不知道一些东西（**隐藏变量**），你很好奇，想知道点那些不了解的东西。怎么办呢？     
-你根据一些假设（parameter）**先猜**（E-step），把那些不知道的东西都猜出来，假装你全都知道了; 然后有了这些猜出来的数据，你**反思**一下，更新一下你的**假设**（parameter）,让你观察到的数据更加可能(Maximize likelihood; M-step);然后再猜，再反思，最后，你就得到了一个可以解释整个数据的假设了。
+你根据一些假设（parameter）**先猜**（E-step），把那些不知道的东西都猜出来，假装你全都知道了; 然后有了这些猜出来的数据，你**反思**一下，更新一下你的**假设**（parameter）,让你观察到的数据更加可能(Maximize likelihood; M-step); 然后再猜，再反思，最后，你就得到了一个可以解释整个数据的假设了。
 
 
 ----------
@@ -97,6 +97,24 @@ E_{z|d,w;\theta_t}[\log P(w, z|d;\theta)]
 &= \sum_z P(z|d,w;\theta_t) [\log P(w|z) + \log P(z|d)] \\
 \end{align*}$$
 
+在这一步，我们先猜出 $\theta = (P(z|d), P(w|z))$ ，然后我们就可以求出我们不知道的 $P(z|d,w;\theta_t)$ :
+
+$$P(z^{(k)}|d^{(i)},w^{(j)};\theta_t) = \frac{P_t(z^{(k)}|d^{(i)})P_t(w^{(j)}|z^{(k)})} {\sum_z P_t(z|d^{(i)})P_t(w^{(j)}|z)}$$
+
+**M step:**
+
+$$\begin{align*}
+P_{t+1}(w^{(j)}|z^{(k)}) &= \frac {\sum_d n(d,w^{(j)})P(z^{(k)}|d,w^{(j)};\theta_t)} {\sum_{d,w} n(d,w)P(z^{(k)}|d,w;\theta_t)} \\
+P_{t+1}(z^{(k)}|d^{(i)}) &= \frac {\sum_w n(d^{(i)},w)P(z^{(k)}|d^{(i)},w;\theta_t)} {\sum_{w,z} n(d,w)P(z|d^{(i)},w;\theta_t)}
+\end{align*}$$
+
+M step就是要让 $E_{z|d,w;\theta_t}[\log P(w, z|d;\theta)]$ 最大，利用拉格朗日乘数法（注意这个时候的约束条件：$\sum_w P(w|z) = 1$ 和 $\sum_z P(z|d) = 1$），就可以得到我们更新后的假设 $\theta^{t+1}$。
+
+重复上述过程，直至收敛。
+
+![此处输入图片的描述][6]
+
+
 ----------
 
 
@@ -105,3 +123,4 @@ E_{z|d,w;\theta_t}[\log P(w, z|d;\theta)]
   [3]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-16_152408.png?imageView2/2/w/400
   [4]: http://7xjbdi.com1.z0.glb.clouddn.com/f2.jpg
   [5]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-16_161734.png?imageView2/2/w/400
+  [6]: http://charlesx.top/assets/EM/its.png
