--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -97,9 +97,9 @@ E_{z|d,w;\theta_t}[\log P(w, z|d;\theta)]
 &= \sum_z P(z|d,w;\theta_t) [\log P(w|z) + \log P(z|d)] \\
 \end{align*}$$
 
-在这一步，我们先猜出 $\theta = (P(z|d), P(w|z))$ ，然后我们就可以求出我们不知道的 $P(z|d,w;\theta_t)$ :
+在这一步，我们先猜出 $\theta = (P(z\|d), P(w\|z))$ ，然后我们就可以求出我们不知道的 $P(z\|d,w;\theta_t)$ :
 
-$$P(z^{(k)}|d^{(i)},w^{(j)};\theta_t) = \frac{P_t(z^{(k)}|d^{(i)})P_t(w^{(j)}|z^{(k)})} {\sum_z P_t(z|d^{(i)})P_t(w^{(j)}|z)}$$
+$$P(z^{(k)}\|d^{(i)},w^{(j)};\theta_t) = \frac{P_t(z^{(k)}\|d^{(i)})P_t(w^{(j)}\|z^{(k)})} {\sum_z P_t(z\|d^{(i)})P_t(w^{(j)}\|z)}$$
 
 **M step:**
 
