--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -108,7 +108,7 @@ P_{t+1}(w^{(j)}|z^{(k)}) &= \frac {\sum_d n(d,w^{(j)})P(z^{(k)}|d,w^{(j)};\theta
 P_{t+1}(z^{(k)}|d^{(i)}) &= \frac {\sum_w n(d^{(i)},w)P(z^{(k)}|d^{(i)},w;\theta_t)} {\sum_{w,z} n(d,w)P(z|d^{(i)},w;\theta_t)}
 \end{align*}$$
 
-M step就是要让 $E_{z\|d,w;\theta_t}[\log P(w, z\|d;\theta)]$ 最大，利用拉格朗日乘数法（注意这个时候的**约束条件**：$\sum_w P(w\|z) = 1$ 和 $\sum_z P(z\|d) = 1$），就可以得到我们更新后的假设 $\theta^{t+1}$。
+M step就是要让 $E_{z\|d,w;\theta_t}[\log P(w, z\|d;\theta)]$ 最大，利用**拉格朗日乘数法**（注意这个时候的**约束条件**：$\sum_w P(w\|z) = 1$ 和 $\sum_z P(z\|d) = 1$），就可以得到我们更新后的假设 $\theta^{t+1}$。
 
 重复上述过程，直至收敛。
 
