--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -7,7 +7,7 @@ date:   2016-03-15 15:30
 categories: 自然语言处理 推荐系统
 ---
 
-之前谈过的 "[Latent Semantic Analysis][1]"，可以用来解决一义多词的问题，但缺乏严谨的数理统计基础，同时SVD分解非常耗时，pLSA就是在这样的背景下被提出的。
+之前谈过的 "[Latent Semantic Analysis][1]"，可以用来解决一义多词的问题，但缺乏严谨的数理统计基础，同时SVD分解非常耗时，pLSA就是在这样的背景下被提出的[^3]。
 
 ![此处输入图片的描述][2]
 
@@ -17,7 +17,7 @@ categories: 自然语言处理 推荐系统
 #### pLSA
 和很多模型一样，pLSA 遵从 bag-of-words 假设，即只考虑一篇文档中单词出现的次数，而忽略单词的先后次序关系，且每个单词的出现都是彼此独立的。
 
-我们来看下pLSA的核心思想，
+我们来看下pLSA的核心思想[^2]，
 
 ![此处输入图片的描述][3]
 
@@ -57,13 +57,13 @@ P(w|d) & = \sum_{z\in \mathcal{Z}} P(w,z|d)\\
 
 
 ####  Estimate parameters
-模型中的参数包括： $P(z|d)$  和 P(w|z)。我们可以采用极大似然估计，目标函数为：
+模型中的参数包括： $P(z|d)$  和 $P(w|z)$。我们可以采用极大似然估计，目标函数为：
 
 $$L = \prod_{(d,w)} P(w,d) = \prod_{d\in \mathcal{D}}\prod_{w\in \mathcal{W}} P(w,d)^{n(d,w)} \tag{3}$$
 
 其中 $n(d,w)$ 表示单词 w 在文档 d 中出现的次数。
 
-取对数，
+记 $\theta = (P(z|d), P(w|z))$ （我们要估计的参数）， 取对数，
 
 $$\begin{align*}
 \arg\max_\theta L(\theta)
@@ -77,7 +77,7 @@ $$\begin{align*}
 
 ----------
 
-#### EM通俗版
+#### EM通俗版[^1]
 我们先回味一下EM算法的核心思想。
 
 > 简版：猜（E-step）, 反思（M-step）, 重复；
@@ -85,6 +85,7 @@ $$\begin{align*}
 **啰嗦版**：你知道一些东西（观察的到的数据），你不知道一些东西（**隐藏变量**），你很好奇，想知道点那些不了解的东西。怎么办呢？     
 你根据一些假设（parameter）**先猜**（E-step），把那些不知道的东西都猜出来，假装你全都知道了; 然后有了这些猜出来的数据，你**反思**一下，更新一下你的**假设**（parameter）,让你观察到的数据更加可能(Maximize likelihood; M-step); 然后再猜，再反思，最后，你就得到了一个可以解释整个数据的假设了。
 
+$$\arg\max_\theta Q_t(\theta) = \arg\max_\theta \sum_{d,w} n(d,w) E_{z|d,w;\theta_t}[\log P(w, z|d;\theta)] \tag{4}$$
 
 ----------
 
@@ -124,3 +125,7 @@ M step就是要让 $E_{z\|d,w;\theta_t}[\log P(w, z\|d;\theta)]$ 最大，利用
   [4]: http://7xjbdi.com1.z0.glb.clouddn.com/f2.jpg
   [5]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-16_161734.png?imageView2/2/w/400
   [6]: http://charlesx.top/assets/EM/its.png
+  
+  [^1]: [Probabilistic latent semantic analysis (pLSA)](http://blog.tomtung.com/2011/10/plsa/)
+  [^2]: [Probabilistic Latent Semantic Analysis](http://homepages.inf.ed.ac.uk/rbf/CVonline/LOCAL_COPIES/AV1011/oneata.pdf)
+  [^3]: [概率语言模型及其变形系列(1)-PLSA及EM算法](http://blog.csdn.net/yangliuy/article/details/8330640)
