--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -7,7 +7,7 @@ date:   2016-03-15 15:30
 categories: 自然语言处理 推荐系统
 ---
 
-之前谈过的 "[Latent Semantic Analysis][1]"，可以用来解决一义多词的问题，但缺乏严谨的数理统计基础，同时SVD分解非常耗时，pLSA就是在这样的背景下被提出的[^3]。
+之前谈过的 "[Latent Semantic Analysis][1]"，可以用来解决一义多词的问题，但缺乏严谨的数理统计基础，同时SVD分解非常耗时，pLSA就是在这样的背景下被提出的。
 
 ![此处输入图片的描述][2]
 
@@ -23,7 +23,7 @@ categories: 自然语言处理 推荐系统
 
 实心的节点 d 和 w 表示我们能观察到的文档和单词，空心节点 z 表示我们观察不到的隐藏变量，用来表示隐含的主题。
 
-pLSA假设每篇文档的生成过程是这样的：
+pLSA假设每篇文档的生成过程是这样的[^3]：
 
 - 以 $P(d)$ 的先验概率选择一篇文档 $d$      
 - 选定 d 后，以 $P(z\|d)$ 的概率选中主题 z       
