--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -63,7 +63,7 @@ $$L = \prod_{(d,w)} P(w,d) = \prod_{d\in \mathcal{D}}\prod_{w\in \mathcal{W}} P(
 
 其中 $n(d,w)$ 表示单词 w 在文档 d 中出现的次数。
 
-记 $\theta = (P(z|d), P(w|z))$ （我们要估计的参数）， 取对数，
+记 $\theta = (P(z\|d), P(w\|z))$ （我们要估计的参数）， 取对数，
 
 $$\begin{align*}
 \arg\max_\theta L(\theta)
