--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -95,7 +95,7 @@ $$\arg\max_\theta Q_t(\theta) = \arg\max_\theta \sum_{d,w} n(d,w) E_{z|d,w;\thet
 $$\begin{align*}
 E_{z|d,w;\theta_t}[\log P(w, z|d;\theta)]
 &= \sum_z P(z|d,w;\theta_t) \log P(w, z|d;\theta) \\
-&= \sum_z P(z|d,w;\theta_t) [\log P(w|z) + \log P(z|d)] \\
+&= \sum_z P(z|d,w;\theta_t) [\log P(w|z) + \log P(z|d)] \tag{5}
 \end{align*}$$
 
 在这一步，我们先猜出 $\theta = (P(z\|d), P(w\|z))$ ，然后我们就可以求出我们不知道的 $P(z\|d,w;\theta_t)$ :
