--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -116,6 +116,9 @@ M step就是要让 $E_{z\|d,w;\theta_t}[\log P(w, z\|d;\theta)]$ 最大，利用
 ![此处输入图片的描述][6]
 
 
+#### 总结
+pLSA 的问题是在**文档层面**上没有一个概率模型，每篇文档的 $P(d\|z)$ 都是需要拟合的模型参数。 这就导致参数的数目会随文档数目线性增长、不能处理训练集外的文档这样的问题。
+
 ----------
 
 
