--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -115,6 +115,22 @@ M step就是要让 $E_{z\|d,w;\theta_t}[\log P(w, z\|d;\theta)]$ 最大，利用
 
 ![此处输入图片的描述][6]
 
+----------
+
+####  Non-negative Matrix Factorization
+另外，我们也可以通过矩阵分解的方式来呈现 pLSA，根据公式：
+
+$$P(w,d) = \sum_{z\in \mathcal{Z}}P(z)P(d|z)P(w|z)$$
+
+我们可以考虑利用矩阵分解的方式得到: $P(z),P(d\|z),P(w\|z)$. 不过这里用的是 Non-negative Matrix Factorization（非负矩阵分解），不是SVD呀.
+
+> 利用矩阵分解来解决实际问题的分析方法很多，如PCA(主成分分析)、ICA(独立成分分析)、SVD(奇异值分解)、VQ(矢量量化)等。在所有这些方法中，原始的大矩阵 V 被近似分解为低秩的 $V=WH$ 形式。这些方法的共同特点是，因子 W 和 H 中的元素可为正或负，即使输入的初始矩阵元素是全正的，传统的秩削减算法也不能保证原始数据的**非负性**。在数学上，分解结果中存在负值是正确的，**但负值元素在实际问题中往往是没有意义的**。例如图像数据中不可能有负值的像素点；在文档统计中，负值也是无法解释的。
+
+因为我们要得到的是概率，负值是没有意义的，所以这里采用的是NMF分解，具体大家还是去看看文献，琢磨下。
+
+$$A = L\cdot U\cdot R$$
+
+![此处输入图片的描述][7]
 
 #### 总结
 pLSA 的问题是在**文档层面**上没有一个概率模型，每篇文档的 $P(d\|z)$ 都是需要拟合的模型参数。 这就导致参数的数目会随文档数目线性增长、不能处理训练集外的文档这样的问题。
