--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -132,6 +132,12 @@ $$A = L\cdot U\cdot R$$
 
 ![此处输入图片的描述][7]
 
+图中，矩阵 $\hat{A}$中， N 表示的是文档数， M 表示单词总数。
+
+ - $L$ 包含文档概率 $P(d|z)$.
+ - $U$ 是主题的先验概率 P(z)，对角矩阵.
+ - $R$ 表示单词概率 $P(w|z)$.
+
 #### 总结
 pLSA 的问题是在**文档层面**上没有一个概率模型，每篇文档的 $P(d\|z)$ 都是需要拟合的模型参数。 这就导致参数的数目会随文档数目线性增长、不能处理训练集外的文档这样的问题。
 
