--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -128,7 +128,7 @@ $$P(w,d) = \sum_{z\in \mathcal{Z}}P(z)P(d|z)P(w|z)$$
 
 因为我们要得到的是概率，负值是没有意义的，所以这里采用的是NMF分解，具体大家还是去看看文献，琢磨下。
 
-$$A = L\cdot U\cdot R$$
+$$A = L\cdot U\cdot R \tag{6}$$
 
 ![此处输入图片的描述][7]
 
