--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -140,10 +140,45 @@ $$A = L\cdot U\cdot R \tag{6}$$
 
 ----------
 
+#### LSA vs pLSA[^4]
+
+![此处输入图片的描述][8]
+
+从图中我们可以看到pLSA与LSA之间的对应关系。其中 $p(z)$ 刻画了 Latent Space 也即 topic space 的信息； $p(w\|z)$ 刻画了 topic space 与 term space 之间的关系，对应着 LSA 中的正交基 V ；在文档分类时，这两部分也就是我们在模型训练结束需要保存的信息，当一个新的文档的到来时， 我们可以再次利用 EM 算法得到新的文档与主题的对应关系 $p(d\|z)$ ，并由此得到文档在 topic 空间上的表示 $p(z\|d)$。
+
 #### 总结
-pLSA 的问题是在**文档层面**上没有一个概率模型，每篇文档的 $P(d\|z)$ 都是需要拟合的模型参数。 这就导致参数的数目会随文档数目线性增长、不能处理训练集外的文档这样的问题。
+**pLSA的优势：**
+
+ - 定义了概率模型，而且每个变量以及相应的概率分布和条件概率分布都有明确的物理解释；
+ - 相比于 LSA 隐含的高斯分布假设，pLSA 隐含的 Multi-nomial 分布假设更符合文本特性；
+ - pLSA 的优化目标是是 KL-divergence 最小，而不是依赖于最小均方误差等准则；
+ - 可以利用各种 model selection 和 complexity control 准则来确定 topic 的维数；
+ 
+
+**pLSA的不足：**
+
+ - 概率模型不够完备：在 document 层面上没有提供合适的概率模型，使得pLSA并不是完备的生成式模型
+ - 随着 document 和 term 个数的增加，pLSA模型复杂度也线性增加，变得越来越庞大；
+
+
+针对 pLSA 的不足，研究者们又提出了各种各样的 topic based model , 其中包括大名鼎鼎的 Latent Dirichlet Allocation (LDA，生成式模型)。
 
 ----------
+
+
+  [^1]: [Probabilistic latent semantic analysis (pLSA)](http://blog.tomtung.com/2011/10/plsa/)
+  [^2]: [Probabilistic Latent Semantic Analysis](http://homepages.inf.ed.ac.uk/rbf/CVonline/LOCAL_COPIES/AV1011/oneata.pdf)
+  [^3]: [概率语言模型及其变形系列(1)-PLSA及EM算法](http://blog.csdn.net/yangliuy/article/details/8330640)
+  [^4]: [Probabilistic Latent Semantic Analysis](https://people.cs.pitt.edu/~milos/courses/cs3750-Fall2007/lectures/plsa.pdf)
+
+  [1]: http://charlesx.top/2016/03/Latent-Semantic-Analysis/
+  [2]: http://7xjbdi.com1.z0.glb.clouddn.com/f1_plsa.jpg
+  [3]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-16_152408.png?imageView2/2/w/400
+  [4]: http://7xjbdi.com1.z0.glb.clouddn.com/f2.jpg
+  [5]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-16_161734.png?imageView2/2/w/400
+  [6]: http://charlesx.top/assets/EM/its.png
+  [7]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-16_214934.png
+  [8]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-17_093803.png
 
 
   [1]: http://charlesx.top/2016/03/Latent-Semantic-Analysis/
