--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -10,8 +10,8 @@ categories: 机器学习 自然语言处理
 #### 共轭先验分布
  现在假设我们有这样几类概率：$P(\theta)$（先验分布）, $P(\theta\|x)$（后验分布）, $P(x)$, $P(x\|\theta)$ （似然函数） .
  
- $$P(\theta\|x) = \frac{P(x\|\theta)P(\theta)}{P(x)} \propto P(x\|\theta)P(\theta)$$
+ $$P(\theta|x) = \frac{P(x|\theta)P(\theta)}{P(x)} \propto P(x|\theta)P(\theta)$$
 
-> 在贝叶斯概率理论中，如果后验概率 $P(\theta|x)$ 和先验概率 $p(\theta)$ 满足同样的分布，那么，先验分布和后验分布被叫做共轭分布，同时，**先验分布**叫做**似然函数**的共轭先验分布。
+> 在贝叶斯概率理论中，如果后验概率 $P(\theta\|x)$ 和先验概率 $p(\theta)$ 满足同样的分布，那么，先验分布和后验分布被叫做共轭分布，同时，**先验分布**叫做**似然函数**的共轭先验分布。
 
 **注意，共轭指的是先验分布和似然函数共轭。**
