--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -20,15 +20,21 @@ categories: 机器学习 自然语言处理
 
 ![此处输入图片的描述][1]
 
+----------
+
+
 #### 共轭先验分布
-通过上面的分析，当我们知道先验概率 $P(\theta)$ 的时候，光用最大似然是不靠谱的，因为最大似然的猜测可能先验概率非常小。那么，我们如何选取先验概率分布呢？
+通过上面的分析，当我们知道先验概率 $p(\theta)$ 的时候，光用最大似然是不靠谱的，因为最大似然的猜测可能先验概率非常小。那么，我们如何选取先验概率分布呢？
 
 这里我们需要先了解下共轭先验公布。
 
-> 在贝叶斯概率理论中，如果后验概率 $P(\theta\|x)$ 和先验概率 $p(\theta)$ 满足同样的分布，那么，先验分布和后验分布被叫做共轭分布，同时，**先验分布**叫做**似然函数**的共轭先验分布。
+> 在贝叶斯概率理论中，如果后验概率 $P(\theta\|x)$ 和先验概率 $p(\theta)$ 满足同样的分布，那么，先验分布和后验分布被叫做共轭分布，同时，**先验分布**称为**似然函数**的共轭先验分布。
 
 **注意，共轭指的是先验分布和似然函数共轭。**
+
+在实际问题中，往往我们先得到和固定的是似然函数（根据观测样本），这时**先验函数**（可以理解为先验知识或者是对后验分布的一种假设和猜测）是可以选择的。采用**共轭先验**，可以使得先验分布和后验分布的形式相同，这样一方面合符人的直觉（它们应该是相同形式），另外一方面是可以形成一个**先验链**，即当前的后验分布可以作为下一次计算的先验分布，如果形式相同，就可以形成一个链条[^2]。
 
   [1]: http://7xjbdi.com1.z0.glb.clouddn.com/Beta_distribution_pdf.svg.png
   
   [^1]: [数学之美番外篇：平凡而又神奇的贝叶斯方法](http://mindhacks.cn/2008/09/21/the-magical-bayesian-method/)
+  [^2]: [共轭分布与共轭先验](http://blog.huanghao.me/?p=250)
