--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -24,7 +24,9 @@ categories: 机器学习 自然语言处理
 
 
 #### 共轭先验分布
-通过上面的分析，当我们知道先验概率 $p(\theta)$ 的时候，光用最大似然是不靠谱的，因为最大似然的猜测可能先验概率非常小。那么，我们如何选取先验概率分布呢？
+通过上面的分析，当我们知道先验概率 $p(\theta)$ 的时候，光用最大似然是不靠谱的，因为最大似然的猜测可能先验概率非常小。
+
+那么，我们如何选取先验概率分布呢？
 
 这里我们需要先了解下共轭先验公布。
 
