--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -28,6 +28,13 @@ $$P(\theta|x) = \frac{P(x|\theta)P(\theta)}{\int P(x|\theta)P(\theta)d\theta} \p
 
 $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 
+我们先来看下先验概率对我们后验概率的影响[^3]，
+
+ - If the prior is uninformative, the posterior is very much determined by the data (the posterior is data-driven).
+ - If the prior is informative, the posterior is a mixture of the prior and the data.The more informative the prior, the more data you need to "change" your beliefs, so to speak because the posterior is very much driven by the prior information.
+ - If you have a lot of data, the data will dominate the posterior distribution (they will overwhelm the prior).
+
+
 那么，我们如何选取先验概率分布呢？
 
 这里我们需要先了解下共轭先验公布。
@@ -48,3 +55,4 @@ http://wenku.baidu.com/view/a542dbf2770bf78a6529546a.html?st=1
 
   [^1]: [数学之美番外篇：平凡而又神奇的贝叶斯方法](http://mindhacks.cn/2008/09/21/the-magical-bayesian-method/)
   [^2]: [共轭分布与共轭先验](http://blog.huanghao.me/?p=250)
+  [^3]: [Help me understand Bayesian prior and posterior distributions](http://stats.stackexchange.com/questions/58564/help-me-understand-bayesian-prior-and-posterior-distributions)
