--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -30,7 +30,7 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 
 我们先来看下先验概率对我们后验概率的影响[^3]，
 
-> - If the prior is uninformative, the posterior is very much determined by the data (the posterior is data-driven).
+- If the prior is uninformative, the posterior is very much determined by the data (the posterior is data-driven).
 - If the prior is informative, the posterior is a mixture of the prior and the data.The more informative the prior, the more data you need to "change" your beliefs, so to speak because the posterior is very much driven by the prior information.
 - If you have a lot of data, the data will dominate the posterior distribution (they will overwhelm the prior)[^3].
 
