--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -23,27 +23,46 @@ $$P(\theta|x) = \frac{P(x|\theta)P(\theta)}{\int P(x|\theta)P(\theta)d\theta} \p
 ----------
 
 
-#### 共轭先验分布
+#### 先验分布
 通过上面的分析，我们知道光用最大似然是不靠谱的，因为最大似然的猜测可能先验概率非常小。
 
 $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 
 我们先来看下先验概率对我们后验概率的影响[^3]，
 
+
 ----------
 
 
 - If the prior is uninformative, the posterior is very much determined by the data (the posterior is data-driven).
 - If the prior is informative, the posterior is a mixture of the prior and the data.The more informative the prior, the more data you need to "change" your beliefs, so to speak because the posterior is very much driven by the prior information.
-- If you have a lot of data, the data will dominate the posterior distribution (they will overwhelm the prior).
+- If you have a lot of data, the data will dominate the posterior distribution (they will overwhelm the prior)[^3].
 
 
 ----------
 
+下面我们来讨论一些常用的先验分布的形式。
+
+1. **无信息先验**（Noninformative Priors） 无信息先验只包含了参数的模糊的或者一般的信息，是对后验分布影响最小的先验分布。很多人愿意选取无信息先验，因为这种先验与其它“主观”的先验相比更接近“客观”。通常，我们把均匀分布作为无信息先验来使用，这相当于在参数所有的可能值上边指派了相同的似然。但是无先验信息的使用也要慎重，比如有些情况下会导致不恰当的后验分布（如不可积分的后验概率密度）。
+
+2. **Jeffreys先验**(Jeffreys’ Prior) Jeffreys提出的选取先验分布的原则是一种不变原理，采用Fisher信息阵的平方根作为θ的无信息先验分布。较好地解决了无信息先验中的一个矛盾，即若对参数θ选用均匀分布，则其函数g(θ)往往不是均匀分布。
+
+3. **信息先验**（Informative Priors） 根据以前的经验、研究或专家经验得到的先验分布。
+
+4. **共轭先验**（Conjugate Priors） 共轭先验是指先验分布和后验分布来自同一个分布族的情况，就是说先验和后验有相同的分布形式（当然，参数是不同的）。这些共轭先验是结合似然的形式推导出来的。共轭先验是经常被使用的一种先验分布形式，原因在于数学处理和**计算上**的方便性，同时后验分布的一些参数也可以有很好的**解释**。
 
 那么，我们如何选取先验概率分布呢？
 
-这里我们需要先了解下共轭先验公布。
+**先验分布的选取应以合理性为首要原则,**
+
+> 如果是离散的情况，根据经验或者专家意见形成主观概率就可以得到先验分布。在信息充分的情况下，利用分参数密度估计（如直方图）寻找先验分布，判断似然分布的形式选择共轭先验分布也是一种比较方便的方法。如果没有先验信息，或者先验信息很模糊的情况下，选择无信息先验分布，也可以根据似然函数的形式选择**共轭先验分布**。
+
+
+
+#### 共轭先验分布
+由于共轭先验在计算上的优势，同时具备良好的可解释性，因此在实际中应用很广，这个概念是由 Raiffa and Schlaifer 在1961年提出。
+
+![此处输入图片的描述][2]
 
 > 在贝叶斯概率理论中，如果后验概率 $P(\theta\|x)$ 和先验概率 $p(\theta)$ 满足同样的分布，那么，先验分布和后验分布被叫做共轭分布，同时，**先验分布**称为**似然函数**的共轭先验分布。
 
@@ -51,10 +70,9 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 
 
 http://wenku.baidu.com/view/a542dbf2770bf78a6529546a.html?st=1
-
-  [1]: http://7xjbdi.com1.z0.glb.clouddn.com/Beta_distribution_pdf.svg.png
-  
-
+http://alexanderetz.com/2015/07/25/understanding-bayes-updating-priors-via-the-likelihood/
+http://stats.stackexchange.com/questions/58564/help-me-understand-bayesian-prior-and-posterior-distributions
+http://www.people.fas.harvard.edu/~plam/teaching/methods/bayesianhour/bayesianhour.pdf
 
 ----------
 
@@ -62,3 +80,7 @@ http://wenku.baidu.com/view/a542dbf2770bf78a6529546a.html?st=1
   [^1]: [数学之美番外篇：平凡而又神奇的贝叶斯方法](http://mindhacks.cn/2008/09/21/the-magical-bayesian-method/)
   [^2]: [共轭分布与共轭先验](http://blog.huanghao.me/?p=250)
   [^3]: [Help me understand Bayesian prior and posterior distributions](http://stats.stackexchange.com/questions/58564/help-me-understand-bayesian-prior-and-posterior-distributions)
+
+
+  [1]: http://7xjbdi.com1.z0.glb.clouddn.com/Beta_distribution_pdf.svg.png
+  [2]: http://7xjbdi.com1.z0.glb.clouddn.com/0000041497.gif
