--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -58,21 +58,14 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 > 如果是离散的情况，根据经验或者专家意见形成主观概率就可以得到先验分布。在信息充分的情况下，利用分参数密度估计（如直方图）寻找先验分布，判断似然分布的形式选择共轭先验分布也是一种比较方便的方法。如果没有先验信息，或者先验信息很模糊的情况下，选择无信息先验分布，也可以根据似然函数的形式选择**共轭先验分布**。
 
 
-
 #### 共轭先验分布
-由于共轭先验在计算上的优势，同时具备良好的可解释性，因此在实际中应用很广，这个概念是由 Raiffa and Schlaifer 在1961年提出。
+由于共轭先验在计算上的优势，同时具备良好的可解释性，因此在实际中应用很广，这个概念最先是由 Raiffa and Schlaifer 在1961年提出。
 
 ![此处输入图片的描述][2]
 
 > 在贝叶斯概率理论中，如果后验概率 $P(\theta\|x)$ 和先验概率 $p(\theta)$ 满足同样的分布，那么，先验分布和后验分布被叫做共轭分布，同时，**先验分布**称为**似然函数**的共轭先验分布。
 
 **注意，共轭指的是先验分布和似然函数共轭。**
-
-
-http://wenku.baidu.com/view/a542dbf2770bf78a6529546a.html?st=1
-http://alexanderetz.com/2015/07/25/understanding-bayes-updating-priors-via-the-likelihood/
-http://stats.stackexchange.com/questions/58564/help-me-understand-bayesian-prior-and-posterior-distributions
-http://www.people.fas.harvard.edu/~plam/teaching/methods/bayesianhour/bayesianhour.pdf
 
 ----------
 
