--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -70,6 +70,9 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 
 ----------
 
+#### 举个栗子
+
+----------
 
   [^1]: [数学之美番外篇：平凡而又神奇的贝叶斯方法](http://mindhacks.cn/2008/09/21/the-magical-bayesian-method/)
   [^2]: [共轭分布与共轭先验](http://blog.huanghao.me/?p=250)
