--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -71,7 +71,7 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 ----------
 
 
-#### 举个栗子
+#### 举个栗子[^5]
 
 ----------
 
@@ -80,6 +80,7 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
   [^2]: [共轭分布与共轭先验](http://blog.huanghao.me/?p=250)
   [^3]: [Help me understand Bayesian prior and posterior distributions](http://stats.stackexchange.com/questions/58564/help-me-understand-bayesian-prior-and-posterior-distributions)
   [^4]: [贝叶斯统计基础](https://site.douban.com/182577/widget/notes/10567181/note/294041203/?)
+  [^5]: [Understanding Bayes: Updating priors via the likelihood](http://alexanderetz.com/2015/07/25/understanding-bayes-updating-priors-via-the-likelihood/)
 
 
   [1]: http://7xjbdi.com1.z0.glb.clouddn.com/Beta_distribution_pdf.svg.png
