--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -62,6 +62,8 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 #### 共轭先验分布
 由于共轭先验在计算上的优势，同时具备良好的可解释性，因此在实际中应用很广，这个概念最先是由 Raiffa and Schlaifer 在1961年提出。
 
+> We shall see that an import role is played by conjugate priors, that lead to posterior distributions having the same functional form as the prior , and that therefore lead to a greatly simplified Bayesian analysis.（摘自 "PRML"）
+
 ![此处输入图片的描述][2]
 
 > 在贝叶斯概率理论中，如果后验概率 $P(\theta\|x)$ 和先验概率 $p(\theta)$ 满足同样的分布，那么，先验分布和后验分布被叫做共轭分布，同时，**先验分布**称为**似然函数**的共轭先验分布。
