--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -74,6 +74,17 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 
 
 #### 举个栗子[^5]
+假设我们现在有一位选手在5轮射击比赛中的数据，每轮25次射击，我们需要评判下他的射击准度，
+
+Round 1: 13/25，Round 2: 12/25，Round 3: 14/25，Round 4: 19/25，Total: 58/100
+
+我们先看下似然函数，
+
+$$P(x|\theta) = \theta^x(1-\theta)^{1-x}$$
+
+![此处输入图片的描述][3]
+
+二项分布的共轭先验为 beta 分布，它有两个超参数（hyperparameters），决定了 $\theta$ 的分布（分布的分布）。
 
 ----------
 
