--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -76,7 +76,7 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 #### 举个栗子[^5]
 假设我们现在有一位选手在5轮射击比赛中的数据，每轮25次射击，我们需要评判下他的射击准度，
 
-Round 1: 13/25，Round 2: 12/25，Round 3: 14/25，Round 4: 19/25，Total: 58/100
+<p align="center">Round 1: 13/25，Round 2: 12/25，Round 3: 14/25，Round 4: 19/25，Total: 58/100</p>
 
 我们先看下似然函数，
 
