--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -78,13 +78,15 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 
 <p align="center">Round 1: 13/25，Round 2: 12/25，Round 3: 14/25，Round 4: 19/25，Total: 58/100</p>
 
-我们先看下似然函数，
+我们先看下似然函数( $\theta$ 表示射中的概率)，
 
 $$P(x|\theta) = \theta^x(1-\theta)^{1-x}$$
 
 ![此处输入图片的描述][3]
 
 二项分布的共轭先验为 beta 分布，它有两个超参数（hyperparameters），决定了 $\theta$ 的分布（分布的分布）。
+
+$$P(\theta|\alpha,\beta) = \frac{\theta^{\alpha-1}(1-\theta)^{\beta-1}}{\int_{0}^{1} \theta^{\alpha-1}(1-\theta)^{\beta-1}d\theta}$$
 
 ----------
 
