--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -80,13 +80,18 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 
 我们先看下似然函数( $\theta$ 表示射中的概率)，
 
-$$P(x|\theta) = \theta^x(1-\theta)^{1-x}$$
+$$P(x|\theta) = \theta^x(1-\theta)^{1-x} \tag{3}$$
 
 ![此处输入图片的描述][3]
 
 二项分布的共轭先验为 beta 分布，它有两个超参数（hyperparameters），决定了 $\theta$ 的分布（分布的分布）。
 
-$$P(\theta|\alpha,\beta) = \frac{\theta^{\alpha-1}(1-\theta)^{\beta-1}}{\int_{0}^{1} \theta^{\alpha-1}(1-\theta)^{\beta-1}d\theta}$$
+$$P(\theta|\alpha,\beta) = \frac{\theta^{\alpha-1}(1-\theta)^{\beta-1}}{\int_{0}^{1} \theta^{\alpha-1}(1-\theta)^{\beta-1}d\theta} \tag{4}$$
+
+$\alpha,\beta$ 的值，可以根据我们事先对该选手的了解来选择，
+
+![此处输入图片的描述][4]
+
 
 ----------
 
@@ -101,3 +106,4 @@ $$P(\theta|\alpha,\beta) = \frac{\theta^{\alpha-1}(1-\theta)^{\beta-1}}{\int_{0}
   [1]: http://7xjbdi.com1.z0.glb.clouddn.com/Beta_distribution_pdf.svg.png
   [2]: http://7xjbdi.com1.z0.glb.clouddn.com/0000041497.gif
   [3]: http://7xjbdi.com1.z0.glb.clouddn.com/fig1likelihood.png?imageView2/2/w/200
+  [4]: http://7xjbdi.com1.z0.glb.clouddn.com/three_prior.png
