--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -88,10 +88,17 @@ $$P(x|\theta) = \theta^x(1-\theta)^{1-x} \tag{3}$$
 
 $$P(\theta|\alpha,\beta) = \frac{\theta^{\alpha-1}(1-\theta)^{\beta-1}}{\int_{0}^{1} \theta^{\alpha-1}(1-\theta)^{\beta-1}d\theta} \tag{4}$$
 
-$\alpha,\beta$ 的值，可以根据我们事先对该选手的了解来选择，
+$\alpha,\beta$ 的值，可以根据我们事先对该选手的了解来选择，假设我们现在选择了下面的三种先验分布，我们想分析下先验分布对后验分布的影响。
 
 ![此处输入图片的描述][4]
 
+后验分布，
+
+$$\begin{align*}
+P(\theta|x) & \propto P(x|\theta)P(\theta)\\
+& \propto \theta^x(1-\theta)^{1-x}\theta^{\alpha-1}(1-\theta)^{\beta-1}\\
+& = \theta^{x+\alpha+1}(1-\theta)^{\beta-x} \tag{5}
+\end{align*}$$
 
 ----------
 
