--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -101,6 +101,21 @@ P(\theta|x) & \propto P(x|\theta)P(\theta)\\
 & \rightarrow Beta(\alpha+x,\beta+n-x) \tag{5}
 \end{align*}$$
 
+我们利用增量学习的方式来更新参数，前一轮得到的后验分布将作为下一轮的先验分布。
+
+Round 1: 13/25，
+
+![此处输入图片的描述][5]
+
+Round 2: 12/25，
+
+![此处输入图片的描述][6]
+
+http://wenku.baidu.com/view/a542dbf2770bf78a6529546a.html?st=1
+http://alexanderetz.com/2015/07/25/understanding-bayes-updating-priors-via-the-likelihood/
+http://stats.stackexchange.com/questions/58564/help-me-understand-bayesian-prior-and-posterior-distributions
+http://www.people.fas.harvard.edu/~plam/teaching/methods/bayesianhour/bayesianhour.pdf
+
 ----------
 
 
@@ -115,3 +130,5 @@ P(\theta|x) & \propto P(x|\theta)P(\theta)\\
   [2]: http://7xjbdi.com1.z0.glb.clouddn.com/0000041497.gif
   [3]: http://7xjbdi.com1.z0.glb.clouddn.com/fig1likelihood.png?imageView2/2/w/200
   [4]: http://7xjbdi.com1.z0.glb.clouddn.com/three_prior.png
+  [5]: http://7xjbdi.com1.z0.glb.clouddn.com/first_round.png
+  [6]: http://7xjbdi.com1.z0.glb.clouddn.com/round_2.png
