--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -101,6 +101,8 @@ P(\theta|x) & \propto P(x|\theta)P(\theta)\\
 & \rightarrow Beta(\alpha+x,\beta+n-x) \tag{5}
 \end{align*}$$
 
+> 用上了共轭先验，计算起来 so easy， 形式统一，可解释性强 .
+
 我们利用增量学习的方式来更新参数，前一轮得到的后验分布将作为下一轮的先验分布。
 
 Round 1: 13/25，
@@ -110,11 +112,6 @@ Round 1: 13/25，
 Round 2: 12/25，
 
 ![此处输入图片的描述][6]
-
-http://wenku.baidu.com/view/a542dbf2770bf78a6529546a.html?st=1
-http://alexanderetz.com/2015/07/25/understanding-bayes-updating-priors-via-the-likelihood/
-http://stats.stackexchange.com/questions/58564/help-me-understand-bayesian-prior-and-posterior-distributions
-http://www.people.fas.harvard.edu/~plam/teaching/methods/bayesianhour/bayesianhour.pdf
 
 ----------
 
