--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -2,7 +2,7 @@
 published: true
 author: Charles
 layout: post
-title:  "共轭先验"
+title:  "LDA中的数学知识"
 date:   2016-03-18 15:30
 categories: 机器学习 自然语言处理
 ---
