--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -7,7 +7,7 @@ date:   2016-03-18 15:30
 categories: 机器学习 自然语言处理
 ---
 
-之后准备花时间看看 Bayesian Statistics，现在的了解都太浅显。
+之后准备花时间看看 Bayesian Statistics，现在的了解不够系统。
 
 #### 贝叶斯定理
  现在假设我们有这样几类概率：$P(\theta)$（先验分布）, $P(\theta\|x)$（后验分布）, $P(x)$, $P(x\|\theta)$ （似然函数） .
@@ -28,24 +28,13 @@ $$P(\theta|x) = \frac{P(x|\theta)P(\theta)}{\int P(x|\theta)P(\theta)d\theta} \p
 
 $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 
-我们先来看下先验概率对我们后验概率的影响[^3]，
-
-
-----------
-
-
-- If the prior is uninformative, the posterior is very much determined by the data (the posterior is data-driven).
-- If the prior is informative, the posterior is a mixture of the prior and the data.The more informative the prior, the more data you need to "change" your beliefs, so to speak because the posterior is very much driven by the prior information.
-- If you have a lot of data, the data will dominate the posterior distribution (they will overwhelm the prior)[^3].
-
-
-----------
 
 常用的先验分布的形式[^4]，
 
-1. **无信息先验**（uninformative Priors） 无信息先验只包含了参数的模糊的或者一般的信息，是对后验分布影响最小的先验分布。很多人愿意选取无信息先验，因为这种先验与其它“主观”的先验相比更接近“客观”。通常，我们把均匀分布作为无信息先验来使用，这相当于在参数所有的可能值上边指派了相同的似然。但是无先验信息的使用也要慎重，比如有些情况下会导致不恰当的后验分布（如不可积分的后验概率密度）。
+1. **无信息先验**（uninformative Priors） 无信息先验只包含了参数的模糊的或者一般的信息，是对后验分布**影响最小**的先验分布。很多人愿意选取无信息先验，因为这种先验与其它“主观”的先验相比更接近“客观”。通常，我们把均匀分布作为无信息先验来使用，这相当于在参数所有的可能值上边指派了相同的似然。但是无先验信息的使用也要慎重，比如有些情况下会导致不恰当的后验分布（如不可积分的后验概率密度）。
 
-2. **Jeffreys先验**(Jeffreys’ Prior) Jeffreys提出的选取先验分布的原则是一种不变原理，采用Fisher信息阵的平方根作为θ的无信息先验分布。较好地解决了无信息先验中的一个矛盾，即若对参数θ选用均匀分布，则其函数g(θ)往往不是均匀分布。
+2. **Jeffreys先验**(Jeffreys’ Prior：杰佛
+里先验分布) Jeffreys提出的选取先验分布的原则是一种不变原理，采用 Fisher 信息阵的平方根作为θ的无信息先验分布。较好地解决了无信息先验中的一个矛盾，即若对参数θ选用均匀分布，则其函数g(θ)往往不是均匀分布。
 
 3. **信息先验**（Informative Priors） 根据以前的经验、研究或专家经验得到的先验分布。
 
@@ -70,6 +59,7 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 
 **注意，共轭指的是先验分布和似然函数共轭。**
 
+
 ----------
 
 
@@ -80,7 +70,7 @@ $$\mathrm{posterior} \propto \mathrm{prior} \times \mathrm{likelihood} \tag{2}$$
 
 我们先看下似然函数( $\theta$ 表示射中的概率)，
 
-$$P(x|\theta) = \theta^x(1-\theta)^{1-x} \tag{3}$$
+$$P(x|\theta) = \theta^x(1-\theta)^{n-x} \tag{3}$$
 
 ![此处输入图片的描述][3]
 
@@ -113,6 +103,24 @@ Round 2: 12/25，
 
 ![此处输入图片的描述][6]
 
+Round 3: 14/25，
+
+![此处输入图片的描述][7]
+
+Round 4: 19/25，
+
+![此处输入图片的描述][8]
+
+我们总结一下，先验概率对我们后验概率的影响[^3]，
+
+
+----------
+
+
+- If the prior is uninformative, the posterior is very much determined by the data (the posterior is data-driven).
+- If the prior is informative, the posterior is a mixture of the prior and the data.The more informative the prior, the more data you need to "change" your beliefs, so to speak because the posterior is very much driven by the prior information.
+- If you have a lot of data, the data will dominate the posterior distribution (they will overwhelm the prior)[^3].
+
 ----------
 
 
@@ -129,3 +137,5 @@ Round 2: 12/25，
   [4]: http://7xjbdi.com1.z0.glb.clouddn.com/three_prior.png
   [5]: http://7xjbdi.com1.z0.glb.clouddn.com/first_round.png
   [6]: http://7xjbdi.com1.z0.glb.clouddn.com/round_2.png
+  [7]: http://7xjbdi.com1.z0.glb.clouddn.com/round_3.png
+  [8]: http://7xjbdi.com1.z0.glb.clouddn.com/round4.png
