--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -119,7 +119,7 @@ Round 4: 19/25，
 
 - If the prior is uninformative, the posterior is very much determined by the data (the posterior is data-driven).
 - If the prior is informative, the posterior is a mixture of the prior and the data.The more informative the prior, the more data you need to "change" your beliefs, so to speak because the posterior is very much driven by the prior information.
-- If you have a lot of data, the data will dominate the posterior distribution (they will overwhelm the prior)[^3].
+- If you have a lot of data, the data will dominate the posterior distribution (they will overwhelm the prior).
 
 ----------
 
