--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -9,6 +9,12 @@ categories: 机器学习 自然语言处理
 
 之后准备花时间看看 Bayesian Statistics，现在的了解不够系统。
 
+#### 频率学派 vs 贝叶斯学派
+> 频率派把需要推断的参数 $\theta$ 看做是固定的未知常数，即概率虽然是未知的，但最起码是确定的一个值，同时，样本 X 是随机的，所以频率派重点研究样本空间，大部分的概率计算都是针对样本 X 的分布；而贝叶斯派的观点则截然相反，他们认为待估计的参数是随机变量，服从一定的分布，而样本 X 是固定的，由于样本是固定的，所以他们重点研究的是参数的分布。
+
+$$\text{先验信息}+\text{样本信息} \Rightarrow \text{后验分布}$$
+
+
 #### 贝叶斯定理
  现在假设我们有这样几类概率：$P(\theta)$（先验分布）, $P(\theta\|x)$（后验分布）, $P(x)$, $P(x\|\theta)$ （似然函数） .
 
