--- a/_posts/2016-03-18-LDA-Math.md
+++ b/_posts/2016-03-18-LDA-Math.md
@@ -10,7 +10,7 @@ categories: 机器学习 自然语言处理
 之后准备花时间看看 Bayesian Statistics，现在的了解不够系统。
 
 #### 频率学派 vs 贝叶斯学派
-> 频率派把需要推断的参数 $\theta$ 看做是固定的未知常数，即概率虽然是未知的，但最起码是确定的一个值，同时，样本 X 是随机的，所以频率派重点研究样本空间，大部分的概率计算都是针对样本 X 的分布；而贝叶斯派的观点则截然相反，他们认为待估计的参数是随机变量，服从一定的分布，而样本 X 是固定的，由于样本是固定的，所以他们重点研究的是参数的分布。
+> 频率派把需要推断的参数 $\theta$ 看做是固定的未知常数，即概率虽然是未知的，但最起码是确定的一个值，同时，样本 X 是随机的，所以频率派重点研究样本空间，大部分的概率计算都是针对样本 X 的分布；而贝叶斯派的观点则截然相反，他们认为待估计的参数是随机变量，服从一定的分布，而样本 X 是固定的，由于样本是固定的，所以他们重点研究的是参数的分布[^6]。
 
 $$\text{先验信息}+\text{样本信息} \Rightarrow \text{后验分布}$$
 
@@ -135,6 +135,7 @@ Round 4: 19/25，
   [^3]: [Help me understand Bayesian prior and posterior distributions](http://stats.stackexchange.com/questions/58564/help-me-understand-bayesian-prior-and-posterior-distributions)
   [^4]: [贝叶斯统计基础](https://site.douban.com/182577/widget/notes/10567181/note/294041203/?)
   [^5]: [Understanding Bayes: Updating priors via the likelihood](http://alexanderetz.com/2015/07/25/understanding-bayes-updating-priors-via-the-likelihood/)
+  [^6]: [通俗理解LDA主题模型](http://blog.csdn.net/v_july_v/article/details/41209515)
 
 
   [1]: http://7xjbdi.com1.z0.glb.clouddn.com/Beta_distribution_pdf.svg.png
