--- a/_posts/2016-03-20- LR-and-NB.md
+++ b/_posts/2016-03-20- LR-and-NB.md
@@ -28,3 +28,10 @@ $$\begin{align*}
 \Rightarrow P(Y=1|X) & = \frac{1}{1+\exp((\ln \frac{1-\pi}{\pi})+\sum_i ( \frac{\mu_{i0}-\mu_{i1}}{\delta_i^2} X_i + \frac{\mu_{i1}^2-\mu_{i0}^2}{\delta_i^2} ))}\\
 & = \frac{1}{1+\exp(w_0+\sum_{i=1}^{n}w_iX_i)}  \tag{3}
 \end{align*}$$
+
+其中，
+
+$$\begin{align*}
+w_0 & = \ln \frac{1-\pi}{\pi} + \sum_i \frac{\mu_{i1}^2-\mu_{i0}^2}{\delta_i^2}\\
+w_i & = \frac{\mu_{i0}-\mu_{i1}}{\delta_i^2}
+\end{align*}$$
