--- a/_posts/2016-03-20- LR-and-NB.md
+++ b/_posts/2016-03-20- LR-and-NB.md
@@ -7,6 +7,9 @@ date:   2016-03-20 9:30
 categories: 机器学习
 ---
 
+#### 数学表示
+我们先推导下 Logistic Regression 和 Naive Bayes在数学表达上的相关性[^1].
+
 $$\begin{align*}
 P(Y=1|X) & = \frac{P(Y=1)P(X|Y=1)}{P(Y=1)P(X|Y=1)+P(Y=0)P(X|Y=0)}\\
 & = \frac{1}{1+\frac{P(Y=0)P(X|Y=0)}{P(Y=1)P(X|Y=1)}}\\
@@ -14,7 +17,7 @@ P(Y=1|X) & = \frac{P(Y=1)P(X|Y=1)}{P(Y=1)P(X|Y=1)+P(Y=0)P(X|Y=0)}\\
 & = \frac{1}{1+\exp((\ln \frac{1-\pi}{\pi})+\sum_i\ln\frac{P(X_i|Y=0)}{P(X_i|Y=1)})} \tag{1}
 \end{align*}$$
 
-又，
+我们假设 P(X_i|Y=y_k)服从高斯分布，
 
 $$\begin{align*}
 \sum_i\ln\frac{P(X_i|Y=0)}{P(X_i|Y=1)} & = \sum_i\ln\frac{\frac{1}{\sqrt{2\pi\delta_i^2}}\exp(\frac{-(X_i-\mu_{i0})^2}{2\delta_i^2})}{\frac{1}{\sqrt{2\pi\delta_i^2}}\exp(\frac{-(X_i-\mu_{i1})^2}{2\delta_i^2})}\\
@@ -35,3 +38,6 @@ $$\begin{align*}
 w_0 & = \ln \frac{1-\pi}{\pi} + \sum_i \frac{\mu_{i1}^2-\mu_{i0}^2}{\delta_i^2}\\
 w_i & = \frac{\mu_{i0}-\mu_{i1}}{\delta_i^2}
 \end{align*}$$
+
+
+[^1]: [GENERATIVE AND DISCRIMINATIVE CLASSIFIERS: NAIVE BAYES AND LOGISTIC REGRESSION](http://www.cs.cmu.edu/~tom/mlbook/NBayesLogReg.pdf)
