--- a/_posts/2016-03-20- LR-and-NB.md
+++ b/_posts/2016-03-20- LR-and-NB.md
@@ -17,7 +17,7 @@ P(Y=1|X) & = \frac{P(Y=1)P(X|Y=1)}{P(Y=1)P(X|Y=1)+P(Y=0)P(X|Y=0)}\\
 & = \frac{1}{1+\exp((\ln \frac{1-\pi}{\pi})+\sum_i\ln\frac{P(X_i|Y=0)}{P(X_i|Y=1)})} \tag{1}
 \end{align*}$$
 
-我们假设 P(X_i|Y=y_k)服从高斯分布，
+我们假设 $P(X_i\|Y=y_k)$ 服从高斯分布，
 
 $$\begin{align*}
 \sum_i\ln\frac{P(X_i|Y=0)}{P(X_i|Y=1)} & = \sum_i\ln\frac{\frac{1}{\sqrt{2\pi\delta_i^2}}\exp(\frac{-(X_i-\mu_{i0})^2}{2\delta_i^2})}{\frac{1}{\sqrt{2\pi\delta_i^2}}\exp(\frac{-(X_i-\mu_{i1})^2}{2\delta_i^2})}\\
