--- a/_posts/2016-03-21-LR-SVM.md
+++ b/_posts/2016-03-21-LR-SVM.md
@@ -2,7 +2,7 @@
 published: true
 author: Charles
 layout: post
-title:  "关联分析"
+title:  "Logistic Regression and SVM"
 date:   2016-03-21 9:30
 categories: 机器学习
 ---
