--- a/_posts/2016-03-21-LR-SVM.md
+++ b/_posts/2016-03-21-LR-SVM.md
@@ -26,7 +26,7 @@ $$\begin{align*}
 \end{align*}$$
 
 
-> 区别在于逻辑回归采用的是 log loss（对数损失函数），svm采用的是hinge loss $\rightarrow E(z) = \max(0,1-z)$。
+> 也就是说，它们的区别就在于逻辑回归采用的是 log loss（对数损失函数），svm采用的是hinge loss $\rightarrow E(z) = \max(0,1-z)$。
 
  - SVM: $Loss(z) = (1-z)^+$
  - LR: $Loss(z) = \log(1+\exp(-z))$
