--- a/_posts/2016-03-21-LR-SVM.md
+++ b/_posts/2016-03-21-LR-SVM.md
@@ -28,8 +28,8 @@ $$\begin{align*}
 
 > 也就是说，它们的区别就在于逻辑回归采用的是 log loss（对数损失函数），svm采用的是hinge loss $\rightarrow E(z) = \max(0,1-z)$。
 
- - SVM: $Loss(z) = (1-z)^+$
- - LR: $Loss(z) = \log(1+\exp(-z))$
+ - SVM 损失函数 :  $Loss(z) = (1-z)^+$
+ - LR 损失函数:  $Loss(z) = \log(1+\exp(-z))$
 
 ![此处输入图片的描述][1]
 
