--- a/_posts/2016-03-21-LR-SVM.md
+++ b/_posts/2016-03-21-LR-SVM.md
@@ -9,6 +9,8 @@ categories: 机器学习
 
 逻辑回归和支持向量机之间的区别也是面试经常会问的一道题，特地找了一些相关资料看了下。
 
+![此处输入图片的描述][2]
+
 #### 损失函数
 我们先来看一下带松弛变量的 SVM 和正则化的逻辑回归它们的损失函数[^1]：
 
@@ -47,6 +49,7 @@ svm考虑局部（支持向量），而logistic回归考虑全局，就像大学
 
 
   [1]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-22_195233.png?imageView2/2/w/400
+  [2]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-25_092026.png?imageView2/2/w/400
   
   [^1]: [Machine learning: lecture 7](http://www.ai.mit.edu/courses/6.867-f04/lectures/lecture-7-ho.pdf)
   [^2]: [SVM(一) 基本概念、模型建立](http://zhihaozhang.github.io/2014/05/08/svm1/)
