--- a/_posts/2016-03-13-PCA-SVD.md
+++ b/_posts/2016-03-13-PCA-SVD.md
@@ -68,6 +68,7 @@ $$S_X = \frac{1}{n-1} XX^T \tag{2}$$
 
 我们要消除冗余，也就是要使$S_X$非对角线上的元素为0，也就是使得矩阵 $X$ 的任意两行**线性无关**。
 
+----------
 
 #### 数学描述
 
@@ -122,8 +123,20 @@ $$E^TAE =
       &   &   & \lambda_n &  
 \end{array} \right) \tag{3}$$
 
+----------
 
-未完待续。。。
+### SVD 和 PCA
+PCA 实际上就是对角化 $XX^T$，还记得我们前面推导 SVD 的过程吗，我们是从特征值分解开始的，
+
+$$\begin{align*}
+A^TA & = VDV^T\\
+\Rightarrow A &= U\Sigma V^T
+\end{align*}$$
+
+
+
+----------
+
 
   [1]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-14_164210.png?imageView2/2/w/500
   [2]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-14_164741.png?imageView2/2/w/300
