--- a/_posts/2016-03-13-PCA-SVD.md
+++ b/_posts/2016-03-13-PCA-SVD.md
@@ -125,7 +125,7 @@ $$E^TAE =
 
 ----------
 
-### SVD 和 PCA
+#### SVD 和 PCA
 PCA 实际上就是对角化 $XX^T$，还记得我们前面推导 SVD 的过程吗，我们是从特征值分解开始的，
 
 $$\begin{align*}
